<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goToHomeButton"
                android:onClick="goToHome"
                android:src="@drawable/home"
                android:layout_gravity="start"
                android:layout_weight="1"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goToPreferencesButton"
                android:onClick="goToPreferences"
                android:src="@drawable/wrench"
                android:layout_gravity="end"
                android:layout_weight="1"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">
            <ImageView
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:id="@+id/profileImage"
                android:src="@drawable/likes2chilllogo"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goToUpdateProfile"
                android:src="@drawable/edit_icon"
                android:layout_alignBottom="@id/profileImage"
                android:layout_alignRight="@id/profileImage"
                android:onClick="goToEditProfile"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/dummyFirstName"
                android:id="@+id/firstNameSettings"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/dummyLastName"
                android:id="@+id/lastNameSettings"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyAge"
            android:id="@+id/ageSettings"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/dummyGender"
            android:id="@+id/genderSettings"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/aboutSettings"
            android:text="@string/dummyBio"/>
    </LinearLayout>


</LinearLayout>